# querycases-QTQML

./: CMakeLists.txt  README.md  casedetails.h  casemessage.h  collector.h  main.cpp  main.qml  manager.cpp  manager.h  parsehtml.h  prompttext.cpp  prompttext.h  qml.qrc  querythread.cpp  resultmodel.cpp  resultmodel.h  resultmodelitem.cpp  resultmodelitem.h  resultstatusitemmodel.cpp  resultstatusitemmodel.h  resulttype.h
qml/: LogTextView.qml  MenuView.qml  QueryTextView.qml  ResultTable.qml  ResultView.qml  ResultViewDelegate.qml  ResultViewSectionDelegate.qml
